--- a/sfda/src/main/ui/src/app/users.component.html
+++ b/sfda/src/main/ui/src/app/users.component.html
@@ -7,6 +7,9 @@
         <th>Firstname</th>
         <th>Lastname</th>
         <th>Email</th>
+        <th>Type</th>
+        <th>Valid User</th>
+        <th>QR Code Generated</th>
       </tr>
     </thead>
     <tbody>
@@ -15,6 +18,9 @@
         <td>{{user.firstName}}</td>
         <td>{{user.lastName}}</td>
         <td>{{user.email}}</td>
+        <td>{{user.type}}</td>
+        <td>{{user.isValidated}}</td>
+        <td>{{user.isQRCodeGenerated}}</td>
       </tr>
     </tbody>
   </table>
