--- a/sfda/src/main/ui/src/app/users.component.html
+++ b/sfda/src/main/ui/src/app/users.component.html
@@ -4,21 +4,27 @@
     <thead>
       <tr>
         <th>User Id</th>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
+        <th>First Name</th>
+        <th>Middle Name</th>
+        <th>Last Name</th>
+        <th>Email/UserName</th>
+        <th>Password</th>
         <th>Type</th>
+        <th>BirthDate</th>
         <th>Valid User</th>
-        <th>QR Code Generated</th>
+        <th>QR Code</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let user of users; let i = index">
         <td>{{i + 1}}</td>
         <td>{{user.firstName}}</td>
+        <td>{{user.middleName}}</td>
         <td>{{user.lastName}}</td>
         <td>{{user.email}}</td>
+        <td>{{user.password}}</td>
         <td>{{user.type}}</td>
+        <td>{{user.birthDate}}</td>
         <td>{{user.isValidated}}</td>
         <td>{{user.isQRCodeGenerated}}</td>
       </tr>
