--- a/sfda/src/main/ui/src/app/users.component.html
+++ b/sfda/src/main/ui/src/app/users.component.html
@@ -7,6 +7,7 @@
         <th>First Name</th>
         <th>Middle Name</th>
         <th>Last Name</th>
+        <th>Phone</th>
         <th>Email/UserName</th>
         <th>Password</th>
         <th>Type</th>
@@ -15,12 +16,14 @@
         <th>QR Code</th>
       </tr>
     </thead>
+
     <tbody>
       <tr *ngFor="let user of users; let i = index">
         <td>{{i + 1}}</td>
         <td>{{user.firstName}}</td>
         <td>{{user.middleName}}</td>
         <td>{{user.lastName}}</td>
+        <td>{{user.phone}}</td>
         <td>{{user.email}}</td>
         <td>{{user.password}}</td>
         <td>{{user.type}}</td>
