--- a/sfda/src/main/webapp/src/app/login/login.component.html
+++ b/sfda/src/main/webapp/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" [hidden]="IsLoggedIn" data-target="#exampleModalLong" >
+<button type="button" class="btn btn-primary"  [hidden]="IsLoggedIn" (click)="ShowLogin()" >
  Login
 </button>
-<button type="button" class="btn btn-primary" data-toggle="modal" [hidden]="!IsLoggedIn" data-target="#exampleModalLong" >
+<button type="button" class="btn btn-primary"  [hidden]="!IsLoggedIn" (click)="LogOut()" >
   Logout
  </button>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
@@ -38,3 +38,16 @@
     </div>
   </div>
 </form>
+
+<div id='errorMessage' role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="true"  >
+  <div class="toast-header">
+    <strong class="mr-auto">Bootstrap</strong>
+    <small>11 mins ago</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="toast-body">
+    {{errorMessage}}
+  </div>
+</div>
