--- a/sfda/src/main/webapp/src/app/app.component.html
+++ b/sfda/src/main/webapp/src/app/app.component.html
@@ -11,7 +11,7 @@
       <h1 class="display-4">Welcome to Supply Food System</h1>
       <p class="lead">We are committed to help you during this pandemic.</p>
       <hr class="my-4">
-      <!-- <img src="{{url}}" alt="Italian Trulli"/> -->
+      <img src="{{url}}" alt="Italian Trulli"/>
     </div>
   </div>
   <div class="container"  [hidden]="IsLoggedIn">
