initial version signup

--- a/sfda/src/main/webapp/src/app/app.component.html
+++ b/sfda/src/main/webapp/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="p-2">
       <app-login></app-login>
     </div>
-    <!-- <div class="p-2"><app-singup></app-singup></div> -->
+    <div class="p-2"><app-singup></app-singup></div> 
   </div>
   <div class= "container"[hidden]="!IsLoggedIn">
     <div class="jumbotron">
