--- a/sfda/src/main/webapp/src/app/singup/singup.component.html
+++ b/sfda/src/main/webapp/src/app/singup/singup.component.html
@@ -16,7 +16,7 @@
           <p>Enter the information below</p>
             <fieldset>
               <div class="form-group">
-                <select class="custom-select" formControlName="TYPE" >
+                <select class="custom-select" formControlName="type" >
                   <option value="" selected disabled>Select Type</option>
                   <option value="FAMILY">Family</option>
                   <option value="NOG">Non-profit</option>
@@ -61,3 +61,15 @@
     </div>
   </div>
 </form>
+<div id='errorMessage' role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="true"  >
+  <div class="toast-header">
+    <strong class="mr-auto">Bootstrap</strong>
+    <small>11 mins ago</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="toast-body">
+    {{errorMessage}}
+  </div>
+</div>
