--- a/sfda/src/main/webapp/src/app/singup/singup.component.html
+++ b/sfda/src/main/webapp/src/app/singup/singup.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#singup">
+<button type="button" class="btn btn-primary" [hidden]="IsLoggedIn" data-toggle="modal" data-target="#singup">
   Register
 </button>
 <form [formGroup]="signUpForm" (ngSubmit)="onSubmit(signUpForm.value)">
@@ -35,8 +35,8 @@
                 <small  *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"   class="form-text text-muted">Last name is required.</small>
               </div>
               <div class="form-group">
-                <input class="form-control" formControlName="phone"  placeholder="Phone" required type="phone">
-                <small  *ngIf="phone.invalid && (phone.dirty || phone.touched)"   class="form-text text-muted">Phone number is required.</small>
+                <input type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" formControlName="phone"  placeholder="Phone" required type="phone">
+                <small  *ngIf="phone.invalid && (phone.dirty || phone.touched)"   class="form-text text-muted">Phone number is required or format incorrect 999-999-9999.</small>
               </div>
               <div class="form-group">
                 <input class="form-control" formControlName="email"  placeholder="Email"  required type="email">
